--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Round Robin Demo</title>
+		<title>Fibonacci</title>
 		<script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js" ></script>
 		<script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" ></script>
 	</head>
